# muza-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLUGINS.md  README.md  README.md.sig  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: release.yml  trust-gate.yml
.impeccable/critique/: 2026-07-11T00-58-39Z__muza-client-apps-desktop-src.md
apps/desktop/: index.html  package.json  run-dev.cmd  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  app.css  main.tsx  types.test.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json  main.json  mini.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: engine.rs  lib.rs  local.rs  main.rs  miniplayer.rs  plugin_guest_runtime.js  plugins.rs  rpc.rs  share.rs  state_kv.rs  tray.rs
apps/desktop/src-tauri/testdata/: innertube_player_login_required.json  innertube_player_ok.json  innertube_player_unplayable.json  sc_resolve_no_progressive.json  sc_resolve_ok.json  sc_transcoding_url.json
apps/desktop/src/auth/: LoginScreen.test.tsx  LoginScreen.tsx
apps/desktop/src/data/: demo.ts
apps/desktop/src/i18n/: en.media.ts  en.ts  en.views.ts  index.test.tsx  index.tsx  ru.media.ts  ru.ts  ru.views.ts
apps/desktop/src/lib/: accent.ts  adminChartMath.test.ts  adminChartMath.ts  api-base-url.test.ts  barButtons.ts  composition.test.ts  coverArt.test.ts  coverArt.ts  coverTint.ts  devApiHost.test.ts  devApiHost.ts  discord.test.ts  discord.ts  dnd.ts  dragEngine.test.ts  dragEngine.ts  dragOut.ts  dsLabels.ts  durableState.test.ts  durableState.ts  engine.test.ts  engine.ts  errorReporter.test.ts  errorReporter.ts  fonts.test.ts  fonts.ts  format.ts  historyStack.test.ts  historyStack.ts  hotkeys.ts  hotkeysList.ts  hourLabel.ts  httpAuth.test.ts  legacyPrefs.test.ts  legacyPrefs.ts  localFiles.ts  miniBridge.ts  nativeContextMenu.test.ts  nativeContextMenu.ts  navItems.ts  (+40 more)
apps/desktop/src/mini/: MiniPlayer.tsx
apps/desktop/src/player/: annotations.test.ts  annotations.ts  audioEngine.test.ts  audioEngine.ts  gaplessPlan.test.ts  gaplessPlan.ts  sourcesCache.ts  startPlan.test.ts  startPlan.ts  types.ts  useAnnotations.ts  useJam.ts  useLyrics.ts  useMediaSession.ts  usePlayback.test.ts  usePlayback.ts  useWarmer.ts  warmQueue.test.ts  warmQueue.ts  wrappedAmbient.test.ts  wrappedAmbient.ts
apps/desktop/src/plugins/: PluginFrames.test.tsx  PluginFrames.tsx  appBridge.test.ts  appBridge.ts  fullAccessHost.ts  (+5 more)
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/public/: sw-register.js  sw.js
apps/web/src/: api.ts  audioFx.ts  format.ts  likes.tsx  player.tsx  playlistIcon.ts  playlists.tsx  prefs.tsx  providers.tsx  session.tsx  toast.tsx  variantLabels.ts
examples/full-access-demo/: index.js  manifest.json
examples/hello-plugin/: index.js  manifest.json
scripts/: release-gate.mjs  release-gate.test.mjs
(+131 files in other folders)
