[package]
name = "muza-desktop"
version = "0.1.0"
description = "Muza — музыкальный плеер"
edition = "2021"

[lib]
name = "muza_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
# preserve_order: подпись рецепта — над байтами JSON.stringify сервера,
# порядок ключей при ре-сериализации обязан сохраняться
serde_json = { version = "1", features = ["preserve_order"] }
# Движок добычи (Stage 3): проверка Ed25519-подписи горячего рецепта,
# single-flight резолвов, LRU-touch файлов кэша
ed25519-dalek = "2"
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
filetime = "0.2"
# Discord Rich Presence (Stage 3, слайс 7)
discord-rich-presence = "0.2"
lofty = "0.24.0"
sha2 = "0.11.0"
tauri-plugin-dialog = "2.7.1"
# Автозапуск с системой (настройки → Система)
tauri-plugin-autostart = "2"
# Открытие внешних ссылок в системном браузере (Last.fm-авторизация и т.п.)
tauri-plugin-opener = "2"
# Автообновление с GitHub Releases (Stage 8): подпись updater-ключом,
# pubkey и endpoint — в tauri.conf.json; process — для relaunch после установки
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Нативный drag-out: перетаскивание трека из приложения на рабочий стол
# (файл из кэша добычи с человеческим именем; CrabNebula drag-rs)
tauri-plugin-drag = "2.1.1"
# Плагины уровня 1 (T44, plugins.rs): распаковка .muzaplugin (zip-slip/бомба
# защита через enclosed_name()+лимит), net.fetch (reqwest уже в дереве через
# tauri-plugin-updater — тот же rustls-бэкенд, версия уже разрешена в
# Cargo.lock, доп. компиляции почти нет), парсинг URL для net_allow.
zip = { version = "4", default-features = false, features = ["deflate"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
url = "2"
